# rpicam_hailo_ros

./: .gitmodules  Dockerfile  Dockerfile.hailo  Dockerfile.rpicam  README.md  build_ros.patch  colcon_entrypoint.sh  detect.sh  detection_with_tracker.py  go2rtc.yaml  hailo_detection_ros.py  hailo_yolov8_inference_ros.json  object_detect_publish_ros_stage.cpp  ros_entrypoint.sh  rosdep.list  rosdep.yaml  stream.sh
hailo_detect_ros/: CMakeLists.txt  package.xml
hailo_detect_ros/src/: object_tracking.cpp
